# python-devpi-api-client

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
devpi_api_client/: __init__.py  exceptions.py  version.py
devpi_api_client/api/: __init__.py  auth.py  base.py  index.py  project.py  token.py  user.py
devpi_api_client/models/: __init__.py  base.py  index.py  project.py  token.py  user.py
devpi_api_client/v1/: __init__.py
docs/: RELEASE_GUIDE.md  index.md
tests/: test_base_api.py  test_exceptions.py  test_index.py  test_project_api.py  test_token_api.py  test_user_api.py  test_user_models.py
