[project]
name = "devpi-api-client"
version = "0.2.0"
description = "High-level Python client for managing users, indexes, tokens, and packages on devpi servers."
authors = [
    {name = "ramos", email = "crqdev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["devpi", "pypi", "api", "client", "packaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.11.8,<3.0.0)",
    "pkginfo (>=1.12.1.2,<2.0.0.0)",
    "pymacaroons (>=0.13.0,<0.14.0)"
]

[project.urls]
homepage = "https://github.com/ramos_admin/python-devpi-api-client"
repository = "https://github.com/ramos_admin/python-devpi-api-client"
documentation = "https://github.com/ramos_admin/python-devpi-api-client/blob/main/docs/index.md"
changelog = "https://github.com/ramos_admin/python-devpi-api-client/blob/main/CHANGELOG.md"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

pytest-cov = "^5.0.0"
ruff = "^0.7.4"
mypy = "^1.11.2"
types-requests = "^2.32.0.20241016"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
